--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "backend",
+  "name": "types",
   "module": "index.ts",
   "type": "module",
   "private": true,
-  "scripts": {
-    "start": "bun run index.ts"
-  },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0"
   }
 }
