defined the schemas and did some exports and imports

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,6 +2,9 @@
   "name": "types",
   "module": "index.ts",
   "type": "module",
+  "exports": {
+    "./types": "./types.ts"
+  },
   "private": true,
   "devDependencies": {
     "@types/bun": "latest"
