--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
-    "types": "*"
+    "types": "*",
+    "db": "*"
   }
 }
