--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run index.ts"
+    "start": "bun run index.ts",
+    "dev": "bun run index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -15,7 +16,7 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
-    "types": "*",
+    "types": "*", 
     "db": "*"
   }
 }
